# qwen3-asr-framework

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cli/: q3asr_chunked_stream_cli.cpp  q3asr_cli.cpp
docs/: worklog.md
include/: q3asr.h
scripts/: convert_community1_plda_to_gguf.py  convert_diarization_onnx_to_gguf.py  convert_diarization_pytorch_to_gguf.py  export_community1_offline_fixture.py  pyannote_diarization.py
src/: audio_encoder.cpp  audio_encoder.h  decoder_llama.cpp  decoder_llama.h  diarization_gguf.cpp  diarization_gguf.h  diart_diarizer.cpp  diart_diarizer.h  forced_aligner.cpp  forced_aligner.h  gguf_loader.cpp  gguf_loader.h  mel_spectrogram.cpp  offline_diarizer.cpp  offline_diarizer.h  q3asr.cpp  streaming_diarizer.cpp  streaming_diarizer.h
tests/: aligner_test.cpp  diarization_gguf_test.cpp  diart_diarizer_test.cpp  normalization_test.cpp  offline_diarizer_test.cpp  smoke_test.cpp  streaming_diarizer_test.cpp
tests/data/: community1-offline-20s-long-audio.json
worklogs/: 2026-03-29-community1-diarization-pipelines.md
